2010-01-05  GatoLoko  <GatoLoko@gmail.com>

 * p2p.py: eliminado un mensaje de error al mostrar las estadisticas de
   transmission.

2010-01-04  GatoLoko  <GatoLoko@gmail.com>

 * antispam.py: corregido otro fallo en la consulta sql usada para añadir
   nuevos filtros a la base de datos.
 * antispam.py: eliminado codigo residual de una antigua prueba.
 * antispam.py: corregido un fallo en el sistema anti spambots.
 * antispam.py: pequeña correccion de formato.
 * media.py: dos correcciones de formato.
 * media.py: corregido un comentario.
 * remotos.py: modificado para que solo actue en los canales especificados.
 * p2p.py: adaptado transmission_cb para soportar la nueva ubicacion y formato
   de las estadisticas.

2009-12-11  GatoLoko  <GatoLoko@gmail.com>

 * remotos.py: revision completa del modulo y adaptado para gestionar los
   remotos en la base de datos.
 * gatoscript.db: agregada la tabla "remotos".
 * protecciones.py: arreglados varios errores de formato.
 * antispam.py: corregido un fallo en la consulta sql usada para añadir nuevos
   filtros a la base de datos.
 * notas.py: agregado nuevo modulo para gestionar notas.
 * gatoscript.py: activados los modulos: remotos.py y notas.py
 * ejemplo.py: arreglados algunos comentarios.

2009-12-06  GatoLoko  <GatoLoko@gmail.com>

 * protecciones.py: agregada una excepcion al anti_notice para que no expulse
   al bot de gestion de canales de IRC-Hispano.

2009-12-01  GatoLoko  <GatoLoko@gmail.com>

 * auxiliar.py: agregadas las funciones gatodb_cusor_execute() y
   gatodb_commit() para centralizar el acceso a la base de datos en un solo
   modulo.
 * auxiliar.py: cambiadas algunas variables para que sean privadas del modulo.
 * rss.py: modificado para usar el acceso a la base de datos mediante las
   funciones del modulo auxiliar.
 * protecciones.py: varios arreglos de formato.
 * antispam.py: modificado para usar el acceso a la base de datos mediante las
   funciones del modulo auxiliar.