@@ -1,3 +1,10 @@
+2010-01-12  GatoLoko  <GatoLoko@gmail.com>
+
+ * resaltados.py: corregido un error tipografico en la expresion regular que
+   identifica algunas URLs.
+ * resaltados.py: corregido un bug que introducia un caracter extraño en los
+   mensajes de la red Freenode.
+
 2010-01-05  GatoLoko  <GatoLoko@gmail.com>
 
  * p2p.py: eliminado un mensaje de error al mostrar las estadisticas de
